--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,13 @@ jobs:
         run: pip3 install -r requirements.txt
       - name: Setup Conan Remote
         run: |
-          if [[ "${{ matrix.os }}" == "ubuntu-latest" ]]; then
-            conan profile update settings.compiler.libcxx=libstdc++11 default
-          fi
           conan remote add conan https://conan.mzec.top/artifactory/api/conan/conan
           conan user -p ${{ secrets.CONAN_SECRET }} -r conan admin
+      - name: Init Conan Profile
+        run: |
+          conan profile new default --detect
+          conan profile update settings.compiler.libcxx=libstdc++11 default
+        if: matrix.os == 'ubuntu-latest'
       - name: Build Debug
         run: conan create . _/_ --build=missing -sbuild_type=Debug -oshared=True
       - name: Build Release
